name:                phab-ghc-builder
version:             0.1.0.0
synopsis:            GHC builder for Phabricator
-- description:
homepage:            http://github.com/haskell-infra/phab-ghc-builder
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable phab-build-server
  main-is:             BuildServer.hs
  other-extensions:    OverloadedStrings, ExtendedDefaultRules, GeneralizedNewtypeDeriving, DataKinds, TypeOperators
  build-depends:       base                 >=4.8  && <4.9,
                       phabricator          >=0.1  && <0.2,
                       shelly               >=1.6  && <1.7,
                       text                 >=1.2  && <1.3,
                       time                 >=1.5  && <1.6,
                       transformers         >=0.4  && <0.5,
                       errors               >=2.0  && <2.1,
                       directory            >=1.2  && <1.3,
                       network-uri          ,
                       logging-facade       ,
                       system-filepath      >=0.4  && <0.5,
                       servant-server       >=0.4  && <0.5,
                       servant-client       >=0.4  && <0.5,
                       either               >=4.4  && <4.5,
                       async                >=2.0  && <2.1,
                       stm                  >=2.4  && <2.5,
                       optparse-applicative >=0.12 && <0.13,
                       temporary            >=1.2  && <1.3,
                       wai-extra            >=3.0  && <3.1,
                       warp                 >=3.1  && <3.2,
                       aeson                >=0.10 && <0.11
  default-language:    Haskell2010

executable ghc-build
  main-is:             SimpleBuild.hs
  other-extensions:    OverloadedStrings, ExtendedDefaultRules, GeneralizedNewtypeDeriving, DataKinds, TypeOperators
  build-depends:       base                 >=4.8  && <4.9,
                       phabricator          >=0.1  && <0.2,
                       shelly               >=1.6  && <1.7,
                       text                 >=1.2  && <1.3,
                       time                 >=1.5  && <1.6,
                       transformers         >=0.4  && <0.5,
                       errors               >=2.0  && <2.1,
                       directory            >=1.2  && <1.3,
                       system-filepath      >=0.4  && <0.5,
                       servant-server       >=0.4  && <0.5,
                       servant-client       >=0.4  && <0.5,
                       either               >=4.4  && <4.5,
                       async                >=2.0  && <2.1,
                       stm                  >=2.4  && <2.5,
                       optparse-applicative >=0.12 && <0.13,
                       temporary            >=1.2  && <1.3,
                       aeson                >=0.10 && <0.11
  default-language:    Haskell2010