name:                phabricator
version:             0.1.0.0
synopsis:            A library for interfacing with Phabricator via its Conduit interface.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
copyright:           (c) 2015 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Phabricator.Types,
                       Phabricator.Harbormaster,
                       Phabricator.Remarkup,
                       Phabricator.Differential
  other-extensions:    GeneralizedNewtypeDeriving, OverloadedStrings, TypeOperators, DataKinds
  build-depends:       base           >=4.8  && <4.9,
                       aeson          >=0.10 && <0.11,
                       text           >=1.2  && <1.3,
                       either         >=4.4  && <4.5,
                       servant-server >=0.4  && <0.5,
                       servant-client >=0.4  && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
